--- a/public_html/wp-content/themes/my-developerworld/style.css
+++ b/public_html/wp-content/themes/my-developerworld/style.css
@@ -2,7 +2,7 @@
 Theme Name: My Developer World
 Theme URI:
 Description:
-Author: Bazooka AB
-Version: 2.41.5
+Author: Daniel
+Version: 2.42.1-SNAPSHOT
 */
 
